Some fixes on UI Removed SMDP address from properties file Removed keystore from properties file Use of SMDP address from the card or from activation code