@@ -2,8 +2,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.truphone</groupId>
-    <artifactId>LPAP</artifactId>
-    <version>1.2.7</version>
+    <artifactId>LPA</artifactId>
+    <version>0.1.2.8</version>
     <packaging>jar</packaging>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -43,6 +43,12 @@
             <version>20180813</version>
             <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>org.apache.maven</groupId>
+            <artifactId>maven-model</artifactId>
+            <version>3.3.9</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
     <name>LPASCR</name>
     <build>
@@ -59,14 +65,14 @@
                             <goal> copy-resources </goal>
                         </goals>
                         <configuration>
-                            <outputDirectory> ${basedir}/target/ </outputDirectory>
+                            <outputDirectory> ${basedir}/target/TruLPA_${version}/ </outputDirectory>
                             <resources>
-                                <resource>
+                                <!--                                <resource>
                                     <directory> ${basedir}/src </directory>
                                     <includes>
                                         <include> app.properties </include>
                                     </includes>
-                                </resource>
+                                </resource>-->
                                 <resource>
                                     <directory> ${basedir}/src/main/resources </directory>
                                     <includes>
@@ -96,9 +102,81 @@
                             <archive>
                                 <manifest>
                                     <mainClass>com.truphone.lpap.LPAUI</mainClass>
+                                    <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                                 </manifest>
                             </archive>
                         </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            
+            <plugin>
+                <groupId>com.akathist.maven.plugins.launch4j</groupId>
+                <artifactId>launch4j-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>l4j-clui</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>launch4j</goal>
+                        </goals>
+                        <configuration>
+                            <headerType>console</headerType>
+                            <outfile>target/TruLPA_${version}/lpa.exe</outfile>
+                            <jar>target/LPA-${version}-jar-with-dependencies.jar</jar>
+                            <icon>${basedir}/src/main/resources/tru_logo.ico</icon>
+                            <errTitle>LPA</errTitle>
+                            <classPath>
+                                <mainClass>com.truphone.lpap.LPAUI</mainClass>
+                                <addDependencies>true</addDependencies>
+                                <preCp>anything</preCp>
+                            </classPath>
+                            
+                            <jre>
+                                <minVersion>1.8.0</minVersion>
+                                <opts>
+                                    <opt>-Djava.endorsed.dirs=./endorsed</opt>
+                                </opts>
+                            </jre>
+                            <versionInfo>
+                                <fileVersion>${version}</fileVersion>
+                                <txtFileVersion>${version}</txtFileVersion>
+                                <fileDescription>Truphone LPA Simulator</fileDescription>
+                                <copyright>Truphone 2019</copyright>
+                                <productVersion>${version}</productVersion>
+                                <txtProductVersion>${version}</txtProductVersion>
+                                <productName>Tru LPA</productName>
+                                <internalName>LPA</internalName>
+                                <originalFilename>lpa.exe</originalFilename>
+                            </versionInfo>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>sh.tak.appbundler</groupId>
+                <artifactId>appbundle-maven-plugin</artifactId>
+                <version>1.2.0</version>
+                <configuration>
+                    <mainClass>com.truphone.lpap.LPAUI</mainClass>
+                    <generateDiskImageFile>true</generateDiskImageFile>
+                    <bundleName>Truphone LPA</bundleName>
+                    <iconFile>tru_logo.icns</iconFile>
+                    <additionalResources>
+                        <fileSet>
+                            <directory>${basedir}/src/main/resources</directory>
+                            <includes>
+                                <include>logging.properties</include>
+                            </includes>
+                        </fileSet>
+                    </additionalResources>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>bundle</goal>
+                        </goals>
                     </execution>
                 </executions>
             </plugin>
